# TrainGTFSGenerator

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: gtfs-release.yml
src/: main.py
